samples/_failures_safe/1761006009_038148_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6335555.c: In function ‘main’:
./samples/SAFE/__tmp_d6335555.c:144:12: error: missing terminating " character
  144 |     printf("2. Matrix
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_d6335555.c:144:5: error: expected expression at end of input
  144 |     printf("2. Matrix
      |     ^~~~~~
./samples/SAFE/__tmp_d6335555.c:144:5: error: expected declaration or statement at end of input
